--- a/SKClipImage/SKClipImage/Base.lproj/Main.storyboard
+++ b/SKClipImage/SKClipImage/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="nirisoom.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="B1N-cK-Tr6">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="188.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="B1N-cK-Tr6">
                                 <rect key="frame" x="10" y="373" width="394" height="150"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
@@ -84,7 +84,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="nirisoom.jpeg" width="3024" height="4032"/>
+        <image name="188.jpeg" width="622" height="622"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
