--- a/SKClipImage/SKClipImage/Base.lproj/Main.storyboard
+++ b/SKClipImage/SKClipImage/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="188.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="B1N-cK-Tr6">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="12333.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="B1N-cK-Tr6">
                                 <rect key="frame" x="10" y="373" width="394" height="150"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
@@ -68,11 +68,23 @@
                                     <action selector="showCornerTool:" destination="BYZ-38-t0r" eventType="touchUpInside" id="zx7-4D-Yqy"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uPf-bE-ED2">
+                                <rect key="frame" x="197" y="328" width="65" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="65" id="e6P-vw-vA2"/>
+                                    <constraint firstAttribute="height" constant="30" id="yfl-TZ-5w7"/>
+                                </constraints>
+                                <state key="normal" title="Mirrored"/>
+                                <connections>
+                                    <action selector="touchMirroredBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="oNm-bc-uDS"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="B1N-cK-Tr6" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="1vt-RD-oyx"/>
+                            <constraint firstItem="uPf-bE-ED2" firstAttribute="centerY" secondItem="1H7-YC-frR" secondAttribute="centerY" id="K6p-Zn-5t7"/>
                             <constraint firstItem="B1N-cK-Tr6" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="MAb-ly-rxl"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="1H7-YC-frR" secondAttribute="trailing" constant="12" id="P02-Wb-Gkp"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="B1N-cK-Tr6" secondAttribute="trailing" constant="10" id="PCD-tx-9hZ"/>
@@ -83,6 +95,7 @@
                             <constraint firstItem="esJ-qX-1d7" firstAttribute="top" secondItem="UC5-v7-qjo" secondAttribute="bottom" constant="20" id="cju-oe-2lA"/>
                             <constraint firstItem="UC5-v7-qjo" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="dvw-kE-TfC"/>
                             <constraint firstItem="B1N-cK-Tr6" firstAttribute="top" secondItem="esJ-qX-1d7" secondAttribute="bottom" constant="10" id="fTI-HH-TUB"/>
+                            <constraint firstItem="1H7-YC-frR" firstAttribute="leading" secondItem="uPf-bE-ED2" secondAttribute="trailing" constant="25" id="uFw-R9-AUk"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="cum-cH-3QY" secondAttribute="trailing" constant="20" id="wpt-GZ-yiE"/>
                         </constraints>
                     </view>
@@ -97,7 +110,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="188.jpeg" width="622" height="622"/>
+        <image name="12333.jpeg" width="761" height="476"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
